# LAION_CLAP

./: .gitignore  pyproject.toml
experiment_scripts/: eval_retrieval_freesound.sh  finetune-esc50.sh  finetune-fsd50k.sh  htsat-roberta-large-dataset-fusion.sh  train-clotho_audiocaps.sh  train-htsat-roberta.sh  train-only-clotho.sh  train-pann-roberta.sh  train-resumed-audiocaps.sh  zeroshot_esc50.sh
src/laion_clap/clap_module/: bert.py  model.py
src/laion_clap/training/: data.py  main.py
